# CrossGen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clean.sh  make_meshes.sh  make_tri_meshes.sh
cmake/: FindSCIP.cmake
data/geometry/: geom001.geo  geom002.geo  geom003.geo  geom004.geo  geom005.geo  geom006.geo  geom007.geo  geom008.geo  geom009.geo  geom010.geo  geom011.geo  geom012.geo  geom013.geo  geom014.geo  geom015.geo
src/: LoadMesh.cxx  Mesh2Dgmsh.cpp  TestCutMesh.cxx  TestIntegerGridMap.cxx  TestMIQ.cxx  TestUVParametrization.cxx  Viewer.cxx
src/IGM/: CutMesh.cxx  CutMesh.hxx  MIQ.cxx  MIQ.hxx
src/mesh/: Mesh.hxx  VertexTriangleCSR.cxx  VertexTriangleCSR.hxx
src/polyvec/: CutMesh.cxx  CutMesh.hxx  IntegerGridMap.cxx  IntegerGridMap.hxx  MIQ.cxx  MIQ.hxx  Mesh.cxx  Mesh.hxx  PolyVectors.cxx  PolyVectors.hxx  QuadMeshValidation.cxx  QuadMeshValidation.hxx  VertexTriangleCSR.hxx
src/polyvector/: PolyVectors.cxx  PolyVectors.hxx
src/viewer/: GL.hxx  Geometry.cxx  Geometry.hxx  Interaction.cxx  Interaction.hxx  Render.cxx  Render.hxx  ViewerMain.cxx  ViewerTypes.hxx
